<resources>
    <string name="app_name">KueTradisional</string>
    <string name="image_error">Image Error</string>
    <string name="kue_name">Nama Kue</string>
    <string name="detail">Detail</string>
    <string name="name_profile">Agung Prasetyo</string>
    <string name="name_email">prasetyo.agpr@gmail.com</string>
    <string name="tentang">Tentang</string>
    <string name="share">SHARE</string>
    <string name="gambar">gambar</string>
    <string name="indonesia">Indonesia</string>
    <string name="kue_tradisional">Kue Tradisional</string>
</resources>