<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:scaleType="centerCrop"
            android:layout_width="150dp"
            android:layout_height="120dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/image_error" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/kue_name" />
        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_marginStart="8dp"
            android:layout_below="@id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/detail" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>