<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77BAE4"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gambar"
        android:cropToPadding="false"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/simple_shiny" />

    <TextView
        android:id="@+id/tv_food2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/indonesia"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_splashScreen"
        app:layout_constraintStart_toStartOf="@+id/iv_splashScreen"
        app:layout_constraintTop_toBottomOf="@+id/tv_food" />

    <TextView
        android:id="@+id/tv_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kue_tradisional"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_splashScreen"
        app:layout_constraintStart_toStartOf="@+id/iv_splashScreen"
        app:layout_constraintTop_toBottomOf="@+id/iv_splashScreen" />

    <ImageView
        android:id="@+id/iv_splashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gambar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_food_beverage" />


</androidx.constraintlayout.widget.ConstraintLayout>